@@ -21,13 +21,16 @@
         <fileset dir="${hive.root}/build/serde" includes="*.jar"/>
         <fileset dir="${hive.root}/build/metastore" includes="*.jar"/>
         <fileset dir="${hive.root}/build/ql" includes="*.jar"/>
-        <fileset dir="${hive.root}/ql/lib" includes="antlr-3.0.1.jar"/>
         <fileset dir="${hive.root}/build/hadoopcore/hadoop-0.20.3-CDH3-SNAPSHOT/"
                  includes="hadoop-core-0.20.3-CDH3-SNAPSHOT.jar"/>
         <fileset dir="${common.ivy.lib.dir}" includes="*.jar"/>
-        <fileset dir="${hive.root}/build/ivy/lib/default" includes="jdo2-api-2.3-ec.jar"/>
-        <fileset dir="${hive.root}/build/ivy/lib/default" includes="datanucleus-enhancer-2.0.3.jar"/>
-        <fileset dir="${hive.root}/build/ivy/lib/default" includes="datanucleus-core-2.0.3.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="antlr-3.0.1.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="commons-lang-*.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="commons-logging-*.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="commons-logging-api-*.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="datanucleus-enhancer-*.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="datanucleus-core-*.jar"/>
+        <fileset dir="${hive.root}/build/ivy/lib/default" includes="jdo2-api-*.jar"/>
         <fileset dir="${hive.root}/build/ivy/lib/default" includes="libfb303-*.jar"/>
         <fileset dir="${common.lib.dir}" includes="hadoop_archive-0.3.1.jar"/>
         <fileset dir="${hive.root}/lib" includes="asm-3.1.jar"/>
